<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:theme="@style/Theme.TestOTP"
    tools:context="net.auva.tv.SendOTPActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="120dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/otp_title"
            android:textColor="@color/colorTextSecondary"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/otp_details"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="horizontal">
            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:gravity="center"-->
            <!--                android:text="+964 "-->
            <!--                android:textColor="@color/colorTextSecondary"-->
            <!--                android:textSize="16sp"-->
            <!--                android:textStyle="bold"/>-->
            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_defaultNameCode="iq"
                app:ccp_textSize="16sp" />

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:background="@null"
                android:hint="@string/phone_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLength="11"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorDivider" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnGotOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/button_title"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>