<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="net.auva.tv.VerifyOTPActivity"
    android:theme="@style/Theme.TestOTP"
    android:background="@color/primary_light"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="120dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_title"
            android:textColor="@color/colorTextSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:text="@string/otp_details2"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layoutDirection="ltr"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layoutDirection="ltr"
            >
            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:backgroundTint="@color/colorTextSecondary"
                />
            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:backgroundTint="@color/colorTextSecondary"
                />
            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:backgroundTint="@color/colorTextSecondary"
                />
            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:backgroundTint="@color/colorTextSecondary"
                />
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:backgroundTint="@color/colorTextSecondary"
                />
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:backgroundTint="@color/colorTextSecondary"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didnt_receive_code"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"
                />
            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:id="@+id/btnResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/resend"
                android:textColor="@color/colorRed"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />

        </FrameLayout>




    </LinearLayout>
</ScrollView>