<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="net.auva.tv.MainActivity">

    <ViewFlipper
        android:id="@+id/frag_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateFirstView="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/frag_splash_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/colorPrimary" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/frag_error_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/connection_error"
                android:textAlignment="center"
                android:textColor="@color/colorTextSecondary"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/connection_error_text"
                android:textColor="@color/colorTextSecondary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/frag_btn_retry"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/only_borders_button"
                android:foreground="@drawable/ripple"
                android:text="@string/retry"
                android:textColor="@color/colorTextPrimary" />

        </LinearLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/appbar_padding_top"
                android:theme="@style/AppTheme.AppBarOverlay">


                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:tabMode="scrollable" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>



    </ViewFlipper>



</FrameLayout>
